[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
console-subscriber = "0.1.8"
opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }

